--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,10 @@
 buildscript {
     repositories {
         mavenCentral()
-        maven { url 'https://maven.fabric.io/repo' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
-        classpath 'com.github.nrudenko:gradle-android-cq-plugin:0.1+'
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.github.nrudenko:gradle-android-cq-plugin:0.1.7'
     }
 }
 
@@ -14,12 +12,10 @@ repositories {
     mavenCentral()
     jcenter()
     maven { url 'http://wordpress-mobile.github.io/WordPress-Android' }
-    maven { url 'https://maven.fabric.io/repo' }
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'android-cq'
-apply plugin: 'io.fabric'
+//apply plugin: 'android-cq'
 
 android {
     packagingOptions {
@@ -32,15 +28,15 @@ android {
         jumboMode = true
     }
 
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 24
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId "com.leanote.android"
         versionName "1.0.0"
         versionCode 196
         minSdkVersion 14
-        targetSdkVersion 22
+        targetSdkVersion 24
 
         buildConfigField "String", "APP_PN_KEY", "\"com.leanote.android.playstore\""
     }
@@ -52,84 +48,65 @@ android {
 //            buildConfigField "String", "APP_PN_KEY", "\"com.leanote.android.beta.build\""
 //            applicationId "com.leanote.android.beta"
 //        }
-        wandoujia {}
-        baidu {}
-        c360 {}
-        uc {}
-        leanote {}
-
+//        wandoujia {}
+//        baidu {}
+//        c360 {}
+//        uc {}
+//        leanote {}
         productFlavors.all { flavor ->
             flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
         }
-
-
     }
 
     buildTypes {
-        release {
-            //minifyEnabled true
-            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard.cfg'
-            buildConfigField "String", "APP_PN_KEY", "\"com.leanote.android.debug.build\""
-            ext.enableCrashlytics = false
-        }
-
-        debug {
-            buildConfigField "String", "APP_PN_KEY", "\"com.leanote.android.debug.build\""
-            ext.enableCrashlytics = false
-        }
+//        release {
+//            //minifyEnabled true
+//            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard.cfg'
+//            buildConfigField "String", "APP_PN_KEY", "\"com.leanote.android.debug.build\""
+//            ext.enableCrashlytics = false
+//        }
+//
+//        debug {
+//            buildConfigField "String", "APP_PN_KEY", "\"com.leanote.android.debug.build\""
+//            ext.enableCrashlytics = false
+//        }
     }
-
 
 }
 
 dependencies {
-    compile 'com.crashlytics.sdk.android:crashlytics:2.2.2'
 
-    // Provided by maven central
-    compile ('org.wordpress:mediapicker:1.2.4') {
-        exclude group:'com.android.support'
+    // 导入library-1.0.10(里面是volley)
+    compile('org.wordpress:mediapicker:1.2.4') {
+        exclude group: 'com.android.support'
     }
-    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
-    compile('org.apache.httpcomponents:httpmime:4.3') {
-        exclude module: "httpclient"
-    }
-
-    compile 'com.google.code.gson:gson:2.2.2'
     compile 'org.ccil.cowan.tagsoup:tagsoup:1.2.1'
-    compile 'com.android.support:support-v13:22.2.1'
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:cardview-v7:22.2.1'
-    compile 'com.android.support:recyclerview-v7:22.2.1'
-    compile 'com.android.support:design:22.2.1'
-    compile 'com.github.chrisbanes.photoview:library:1.2.3'
+    compile 'com.android.support:support-v4:24.1.0'
+    compile 'com.android.support:support-v13:24.1.0'
+    compile 'com.android.support:appcompat-v7:24.1.0'
+    compile 'com.android.support:cardview-v7:24.1.0'
+    compile 'com.android.support:recyclerview-v7:24.1.0'
+    compile 'com.android.support:design:24.1.0'
+    compile 'com.github.chrisbanes.photoview:library:1.2.4'
     compile 'com.helpshift:android-aar:3.8.0'
     compile 'commons-lang:commons-lang:2.6'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.automattic:rest:1.0.2'
-    compile 'org.wordpress:graphview:3.4.0'
-    compile 'org.wordpress:persistentedittext:1.0.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.belladati:httpclientandroidlib:4.3.0'
-    compile 'com.mcxiaoke.volley:library:1.0.16'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'org.mongodb:mongo-java-driver:2.12.4'
-    compile 'jp.wasabeef:richeditor-android:+'
-    //compile 'com.nostra13.universalimageloader:universal-image-loader:+'
-
-    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.0'
-    androidTestCompile 'org.objenesis:objenesis:2.1'
-    androidTestCompile 'org.mockito:mockito-core:+'
-
-    // Provided by the WordPress-Android Repository
-    compile 'org.wordpress:gcm:1.0.0' // not found in maven central
-    compile 'org.wordpress:drag-sort-listview:0.6.1' // not found in maven central
-    compile 'org.wordpress:slidinguppanel:1.0.0' // not found in maven central
+    compile 'jp.wasabeef:richeditor-android:1.2.0'
+    compile 'org.wordpress:graphview:3.4.0'
+    compile 'org.wordpress:persistentedittext:1.0.1'
+    compile 'org.wordpress:gcm:1.0.0'
+    compile 'org.wordpress:drag-sort-listview:0.6.1'
+    compile 'org.wordpress:slidinguppanel:1.0.0'
     compile 'org.wordpress:passcodelock:1.0.0'
     compile 'org.wordpress:emailchecker:0.3'
-
-    // Simperium
     compile 'com.simperium.android:simperium:0.6.4'
-
-
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.okhttp3:okhttp:3.3.1'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'com.google.android.gms:play-services-gcm:9.2.1'
 }
 
