--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@
             android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
         </activity>
         <activity
-            android:name=".ui.accounts.NewAccountActivity"
+            android:name=".ui.SignUpActivity"
             android:label="@string/title_activity_new_account"
             android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >
         </activity>
