--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,5 +108,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.google.android.gms:play-services-gcm:9.2.1'
+    compile 'com.facebook.stetho:stetho:1.3.0'
 }
 
