--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,20 @@ buildscript {
     }
     dependencies {
         classpath 'com.github.nrudenko:gradle-android-cq-plugin:0.1.7'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
 repositories {
     mavenCentral()
     jcenter()
+    maven { url "https://www.jitpack.io" }
     maven { url 'http://wordpress-mobile.github.io/WordPress-Android' }
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
+apply plugin: 'com.neenbedankt.android-apt'
 //apply plugin: 'android-cq'
 
 android {
@@ -27,6 +31,10 @@ android {
         jumboMode = true
     }
 
+    lintOptions {
+        abortOnError false
+    }
+
     compileSdkVersion 23
     buildToolsVersion '23.0.3'
 
@@ -34,7 +42,7 @@ android {
         applicationId "com.leanote.android"
         versionName "1.0.0"
         versionCode 196
-        minSdkVersion 14
+        minSdkVersion 19
         targetSdkVersion 23
 
         buildConfigField "String", "APP_PN_KEY", "\"com.leanote.android.playstore\""
@@ -75,6 +83,8 @@ android {
 
 }
 
+def dbflow_version = "4.0.0-beta1"
+
 dependencies {
 
     // 导入library-1.0.10(里面是volley)
@@ -104,11 +114,23 @@ dependencies {
     compile 'org.wordpress:passcodelock:1.0.0'
     compile 'org.wordpress:emailchecker:0.3'
     compile 'com.simperium.android:simperium:0.6.4'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.google.android.gms:play-services-gcm:9.2.1'
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.9'
+
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    // use kapt for kotlin apt
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+
+    // https://mvnrepository.com/artifact/com.squareup.okhttp3/logging-interceptor
+    compile group: 'com.squareup.okhttp3', name: 'logging-interceptor', version: '3.4.1'
+    compile group: 'com.squareup.retrofit2', name: 'adapter-rxjava', version: '2.1.0'
+
 }
 
