--- a/img-selector/build.gradle
+++ b/img-selector/build.gradle
@@ -3,7 +3,7 @@ version = "1.2.0" // 版本号
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '24.0.2'
     resourcePrefix "imgsel"
 
     defaultConfig {
