--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         android:allowBackup="true"
         android:icon="@drawable/leanote_appicon"
         android:label="@string/app_name"
-        android:theme="@style/Leanote"
+        android:theme="@style/AppTheme"
         tools:replace="android:icon, android:allowBackup" >
         <activity
             android:name=".ui.LeaLaunchActivity"
@@ -154,8 +154,12 @@
             android:name=".ui.note.NotesInNotebookActivity"
             android:label="@string/title_activity_notes_in_notebook" >
         </activity>
-        <activity android:name=".ui.note.NoteEditActivity" />
-        <activity android:name=".ui.note.NotePreviewActivity" />
+        <activity android:name=".ui.note.NoteEditActivity"
+            android:label="Edit" />
+        <activity android:name=".ui.note.NotePreviewActivity"
+            android:label="Preview" />
+        <activity android:name=".ui.MainActivity"
+            android:label="Notes" />
     </application>
 
 </manifest>
