use new signInActivity; support custom host
- add new database table: Account
- deprecate AccountHelper, use AccountService instead
- support custom host

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -160,6 +160,7 @@
             android:label="Preview" />
         <activity android:name=".ui.MainActivity"
             android:label="Notes" />
+        <activity android:name=".ui.NewSignInActivity" />
     </application>
 
 </manifest>
